# bevy_template

./: .gitattributes  Cargo.toml  README.md
src/: lib.rs  main.rs
